[project]
name = "merge-s3-csv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.28",
    "gspread>=6.2.1",
    "gspread-dataframe>=4.0.0",
    "pandas>=2.3.3",
    "smart-open>=7.5.0",
    "tqdm>=4.67.1",
]
